force-app/main/default/objects/clofor_com_cfs__VATACBalance__c/fields/clofor_com_cfs__ACBalStartDate__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__ACBalStartDate__c</fullName>
    <label>A/C BAL START DATE</label>
    <type>Date</type>
</CustomField>