force-app/main/default/objects/clofor_com_cfs__VATACBalance__c/fields/clofor_com_cfs__AmountOfBuyingVATFormula__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__AmountOfBuyingVATFormula__c</fullName>
    <formula>clofor_com_cfs__VATInvoiceID__r.clofor_com_cfs__AmountOfTaxVATBuying__c</formula>
    <label>AMOUNT OF BUYING VAT-FORMULA</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>