force-app/main/default/objects/clofor_com_cfs__VATACBalance__c/fields/clofor_com_cfs__AmountOfSellingVATACBal__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__AmountOfSellingVATACBal__c</fullName>
    <label>AMOUNT OF SELLING VAT-A/C BAL</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>